2024-11-28T01:52:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12061101484 # 493
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-28
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 980 1735 / 982 1737
* notice: next accum: outdated-unq outdated-all / unq all: 981 1736 / 982 1737
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-13] / []

2024-11-25T01:52:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12001752799 # 490
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 980 1735 / 981 1736
* notice: next accum: outdated-unq outdated-all / unq all: 980 1735 / 982 1737
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-11-24]

2024-11-24T01:55:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11992189117 # 489
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-24
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 979 1734 / 981 1736
* notice: next accum: outdated-unq outdated-all / unq all: 980 1735 / 981 1736
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-10] / []

2024-11-17T01:54:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11874999344 # 482