@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-11-28T01:52:05Z",
+  "timestamp" : "2024-12-02T01:55:54Z",
   "count_outdated" : 1736,
   "uniques_outdated" : 981,
-  "count" : 1737,
-  "uniques" : 982,
+  "count" : 1738,
+  "uniques" : 983,
   "clones" : [
     {
       "timestamp": "2024-11-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
